# AI-agent-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  mcp.json  mcp_knowledge_server.py  mcp_server.py  mcp_ticket_server.py  package.json  pyproject.toml  server.js  server.test.js
app/: __init__.py  agent_service.py  auth.py  config.py  mcp_identity.py  security.py  storage.py
config/: agents.yml  users.yml
data/: audit.json  policies.json  tickets.json
tests/: test_auth.py  test_config.py  test_security.py
